--- a/blogstyles.css
+++ b/blogstyles.css
@@ -18,6 +18,10 @@ header {
     color: #00d9b2;
     text-transform: uppercase;
 }
+a {
+    color: #404040;
+    text-decoration: none;
+}
 .logo img {
     height: 5vh;
 }
