--- a/blogstyles.css
+++ b/blogstyles.css
@@ -15,6 +15,7 @@ header {
     text-align: center;
     font-size: 1rem;
     margin: 10px 0;
+    margin-top: 4vh;
     color: #00d9b2;
     text-transform: uppercase;
 }
