--- a/blogstyles.css
+++ b/blogstyles.css
@@ -83,6 +83,7 @@ h2 {
     font-size: 1.2rem;
     padding: 10px 20px;
     margin-top: 1vh;
+    margin-bottom: 4vh;
     text-decoration: none;
     border-radius: 5px;
 }
